--- a/main.css
+++ b/main.css
@@ -1,4 +1,9 @@
+
+/* FONT */
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
+
+/* BODY */
 
 body{
 	font-family: 'Open Sans', sans-serif;
